# C_Crypt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Readme.md
bench/: bench_hash.c
ci/: github-actions.yml  sanitizer.sh
cmake/: c_cryptConfig.cmake.in
docs/: api.md  architecture.md  code_format.md  contributing.md  side_channels.md  testing.md
example/: example_placeholder.c
examples/: example_placeholder.c
include/c_crypt/: errors.h  memory.h  types.h  version.h
scripts/: format.sh  run_bench.sh
src/core/: buf.c  buf.h  ct.c  ct.h  endian.h  errors.c  memory.c  random_sys.c
tests/: test.h  test_main.c
tests/unit/: test_buf.c  test_ct.c  test_endian.c  test_memory.c
